[workspace]
members = [
    "contracts/time-lock-vault",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "22.0.0" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true

[workspace.metadata]
homepage = "https://github.com/kenedybok3/Decentralized-Time-Lock-Vault"
repository = "https://github.com/kenedybok3/Decentralized-Time-Lock-Vault"
license = "MIT"
